--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title> Nasa Space app </title>
     <link rel="stylesheet" type="text/css" href ="css/style.css">
+   
   </head>
 
   <body>
@@ -94,6 +95,8 @@
     
     <!-- Main -->
     <script src="js/scene.js"></script>
+<script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/20fb50e5-472f-4542-8984-ee33afd2930b/webchat/config.js" defer></script>
     
   </body>
 
